# RAAI-Foundation-course

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.json  version.h.in
1-Linux/: CMakeLists.txt
1-Linux/1-linux-terminal-basics/: 1-change-directories.md  10-linux-command-help.md  2-make-directories.md  3-list-directory-content.md  4-create-files.md  5-view-file-contents.md  6-delete-files-folders-linux.md  7-copy-files-directory-linux.md  8-move-files-linux.md  9-edit-files-linux.md
1-Linux/2-bash-basics/: 0-introduction-to-bash-scripting.md  1-create-and-run-your-first-bash-shell-script.md  2-using-variables-in-bash.md  3-passing-arguments-and-accepting-user-inputs.md  4-arithmetic-operations.md  5-using-arrays-in-bash.md  6-handling-string-operations.md  7-if-else-statement.md  8-for-while-and-until-Loops.md  9-functions-in-bash.md
2-ProgrammingLanguage/: CMakeLists.txt
2-ProgrammingLanguage/C++/: Makefile  README.md  SUMMARY.md
2-ProgrammingLanguage/C++/1-prepare/: 准备工作.md
2-ProgrammingLanguage/C++/10-classes_and_objects/: 4.1_classes_basics.md
2-ProgrammingLanguage/C++/2-cpp_program/: C++语法框架.md
2-ProgrammingLanguage/C++/2-cpp_program/test/: damm.cpp
2-ProgrammingLanguage/C++/3-variables_types/: 1.2_variables_types.md  test1.cpp  test6.cpp  基础数据类型.md
2-ProgrammingLanguage/C++/3-variables_types/test/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test7.cpp
2-ProgrammingLanguage/C++/4-operators_expressions/: 1.3_operators_expressions.md  test4.cpp  test5.cpp
2-ProgrammingLanguage/C++/4-operators_expressions/test/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test6.cpp
2-ProgrammingLanguage/C++/5-control_flow/: 1.4_control_flow.md  program.cpp
2-ProgrammingLanguage/C++/5-control_flow/test/: anwsers.cpp  array_sum.cpp  day_of_week.cpp  fix_program.cpp  grade_calculator.cpp  positive_number_check.cpp  print_even_numbers.cpp  print_triangle.cpp  skip_numbers.cpp
2-ProgrammingLanguage/C++/6-input_output/: 1.5_input_output.md  6_input_output.md
2-ProgrammingLanguage/C++/7-functions/: 7_function_overloading.md  7_functions.md  program.cpp
2-ProgrammingLanguage/C++/7-functions/test/: answers.cpp  convert.cpp  factorial.cpp  fix_program01.cpp  is_leagle.cpp  output.cpp
2-ProgrammingLanguage/C++/8-arrays/: 2.3_arrays.md  8_arrays.md
2-ProgrammingLanguage/C++/9-pointers/: 3.1_pointers_basics.md  9_pointers_basics.md
2-ProgrammingLanguage/C++/9-pointers/test/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
2-ProgrammingLanguage/C++/exercises/chapter01/: exercise1_1.cpp  exercise1_2.cpp  exercise1_3.cpp
2-ProgrammingLanguage/C++/exercises/chapter02/: exercise2_1.cpp  exercise2_2.cpp  exercise2_3.cpp
2-ProgrammingLanguage/C++/exercises/chapter03/: exercise3_1.cpp
2-ProgrammingLanguage/C++/exercises/chapter04/: exercise4_1.cpp
3-Algorithm&Datastructure/: CMakeLists.txt
LinearAlgebra/: CMakeLists.txt
Robotics/: CMakeLists.txt
